<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">縦書きプレビュー for Jota+</string>

    <string name="ok">OK</string>
    <string name="about_ipa_font">IPAフォントについて</string>
    <string name="ipa_license">IPAフォントライセンスv1.0</string>

    <string name="app_about">このアプリについて</string>
    <string name="app_usage">使い方</string>

    <string name="font_size">フォントのサイズ</string>
    <string name="font_kind">フォントの種類</string>
    <string name="font_kind_mincho">IPA明朝</string>
    <string name="font_kind_gothic">IPAゴシック</string>

    <string name="char_max_port">折り返し文字数(縦画面)</string>
    <string name="char_max_land">折り返し文字数(横画面)</string>
    <string name="char_max_summary">一行当たりの文字数を設定します</string>
    <string name="char_max_hint">0:画面端で折返し</string>

    <string name="writing_paper">原稿用紙モード</string>
    <string name="writing_paper_summary">原稿用紙風に一行20文字で表示します。</string>

    <string name="category_settings">設定</string>
    <string name="category_information">情報</string>

    <string name="permission_name">縦書きプレビュー</string>
    <string name="permission_description">縦書きプレビューを起動するための権限です</string>

    <string name="background_black">黒背景を使う</string>
    <string name="background_black_summary">黒地に白で描画します</string>

</resources>