<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/category_settings">

        <SwitchPreferenceCompat
            android:key="background_black"
            android:title="@string/background_black"
            android:summary="@string/background_black_summary"
            android:defaultValue="false"
            />

        <SwitchPreferenceCompat
            android:key="writing_paper"
            android:title="@string/writing_paper"
            android:summary="@string/writing_paper_summary"
            android:defaultValue="false"
            />

        <ListPreference
            android:key="font_kind"
            android:title="@string/font_kind"
            android:entries="@array/font_kind"
            android:entryValues="@array/font_kind_value"
            android:defaultValue="mincho"
            />

        <ListPreference
            android:key="font_size"
            android:title="@string/font_size"
            android:entries="@array/font_size"
            android:entryValues="@array/font_size_value"
            android:defaultValue="16"
            />

        <EditTextPreference
            android:key="char_max_port"
            android:title="@string/char_max_port"
            android:summary="@string/char_max_summary"
            android:defaultValue="0"
            android:dialogLayout="@layout/preference_charmax"
            />

        <EditTextPreference
            android:key="char_max_land"
            android:title="@string/char_max_land"
            android:summary="@string/char_max_summary"
            android:defaultValue="0"
            android:dialogLayout="@layout/preference_charmax"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_information">
        <Preference
            android:key="about_ipa"
            android:title="@string/about_ipa_font"
            android:summary="@string/ipa_license">
        </Preference>

        <Preference
            android:key="app_about"
            android:title="@string/app_about"
            >
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
